# msg_box

./: Cargo.toml  README.md
src/: lib.rs  message.rs  message_box.rs  message_data.rs  message_error.rs  message_queue.rs  message_scheduler.rs  msg_box.rs
tests/: clear.rs  simple.rs  test_basic.rs  test_error.rs  test_groups.rs  test_max_size.rs
